actividades  version 2 trabajo colaborativo ovi

--- a/index.html
+++ b/index.html
@@ -20,29 +20,39 @@
 	</header>
 
 	<nav>
-			<ul class="menu">
-					<li><a href="index.html" class="menu">Inicio</a></li>
-					<li><a href="#" class="menu">Lecturas</a>
-						<ul>
-							<li><a href="lecturas.html" id="lectura1" class="menu">Etapas del desarrollo de software</a></li>
-							<li><a href="modelos.html" id="lectura2" class="menu">Modelos de desarrollo </a></li>
-							<li><a href="scrum.html" id="lectura1" class="menu">Scrum como metodologia</a></li>
-							<li><a href="libre.html" id="lectura2" class="menu">Software libre y de código abierto para el
-									desarrollo</a></li>
-							<li><a href="calidad.html" id="lectura2" class="menu">Calidad de software</a></li>
-						</ul>
-					</li>
-					<li><a href="#" class="menu">Multimedia</a>
-						<ul>
-								<li><a href="introduccioningenieriasoftware.html" id="Introduccion" class="menu">Introduccion a la Ingenieria de
-										Software</a></li>
-							<li><a href="ingenieriasoftware.html" id="ingenieriasoftware" class="menu">Inigeniería de Software</a></li>
-							
-						</ul>
-		
-					<li><a href="actividades.html" class="menu">Actividades</a></li>
-					<li><a href="autores.html" class="menu">Autores</a>
+		<ul class="menu">
+			<li><a href="index.html" class="menu">Inicio</a></li>
+			<li><a href="#" class="menu">Lecturas</a>
+				<ul>
+					<li><a href="lecturas.html" id="lectura1" class="menu">Etapas del desarrollo de software</a></li>
+					<li><a href="modelos.html" id="lectura2" class="menu">Modelos de desarrollo </a></li>
+					<li><a href="scrum.html" id="lectura1" class="menu">Scrum como metodologia</a></li>
+					<li><a href="libre.html" id="lectura2" class="menu">Software libre y de código abierto para el
+							desarrollo</a></li>
+					<li><a href="calidad.html" id="lectura2" class="menu">Calidad de software</a></li>
 				</ul>
+			</li>
+			<li><a href="#" class="menu">Multimedia</a>
+				<ul>
+					<li><a href="introduccioningenieriasoftware.html" id="Introduccion" class="menu">Introduccion a la
+							Ingenieria de
+							Software</a></li>
+					<li><a href="ingenieriasoftware.html" id="ingenieriasoftware" class="menu">Inigeniería de
+							Software</a>
+					</li>
+
+				</ul>
+			</li>
+			<li><a href="#" class="menu">Actividades</a>
+				<ul>
+					<li><a href="actividad1.html" id="actividad1" class="menu">Actividad1</a></li>
+					<li><a href="actividad2.html" id="actividad2" class="menu">Actividad2</a></li>
+					<li><a href="actividad3.html" id="actividad3" class="menu">Actividad3</a></li>
+
+				</ul>
+			</li>
+			<li><a href="autores.html" class="menu">Autores</a>
+		</ul>
 	</nav>
 	<section id="conte">
 		<section id="princi">
