--- a/lecturas.html
+++ b/lecturas.html
@@ -107,9 +107,9 @@
          <header>
          <h2>CICLO DE SOFTWARE </h2>		 
         </header>
-        <figure><img src="img/lecturas/04.JPG" width="340" height="340"></figure>
+        <figure><img src="img/lecturas/04.jpg" width="340" height="340"></figure>
 	     <p class="texto"></p>
-<figure><img src="img/lecturas/05.PNG" width="300" height="300"></figure>
+<figure><img src="img/lecturas/05.png" width="300" height="300"></figure>
 
           </article>  
 
