--- a/scrum.html
+++ b/scrum.html
@@ -61,7 +61,7 @@
 			
          <h2>SCRUM</h2>		 
         </header>
-        <figure class="img1" ><img src="img/scrum/06.png" width="600" height="600"></figure>
+        <figure class="img1" ><img src="img/scrum/06.PNG" width="600" height="600"></figure>
            <p class="texto">
           
 Scrum es un proceso de gestión que reduce la complejidad en el desarrollo de productos para satisfacer las necesidades de los clientes. La gerencia y los equipos de Scrum trabajan juntos alrededor de requisitos y tecnologías para entregar productos funcionando de manera incremental usando el empirismo.
