--- a/libre.html
+++ b/libre.html
@@ -61,7 +61,7 @@
         <header>
          <h2>SOFTWARE LIBRE</h2>		 
         </header>
-        <figure class="img1" ><img src="img/libre/07.png" width="300" height="300"></figure>
+        <figure class="img1" ><img src="img/libre/07.PNG" width="300" height="300"></figure>
            <p class="textoa">
 
           es el software que respeta la libertad de los usuarios y la comunidad. A grandes rasgos, significa que los usuarios tienen la libertad de ejecutar, copiar, distribuir, estudiar, modificar y mejorar el software. Es decir, el «software libre» es una cuestión de libertad, no de precio. Para entender el concepto, piense en «libre» como en «libre expresión», no como en «barra libre». En inglés, a veces en lugar de «free software» decimos «libre software», empleando ese adjetivo francés o español, derivado de «libertad», para mostrar que no queremos decir que el software es gratuito.
