--- a/calidad.html
+++ b/calidad.html
@@ -61,7 +61,7 @@
         <header>
          <h2>CARACTERISTICAS CALIDAD DE SOFTWARE </h2>		 
         </header>
-        <figure><img src="img/calidad/08.png" width="300" height="300"></figure>
+        <figure><img src="img/calidad/08.PNG" width="300" height="300"></figure>
            <p class="texto">
 <p class="texto">Funcionabilidad: Es que el usuario pueda utilizar el software sin ningún problema.</p>
 <p class="texto">Confiabilidad: En este es que los datos sean seguros he íntegros de si mismos, sin robo alguno.</p>
