--- a/calidad.html
+++ b/calidad.html
@@ -103,7 +103,7 @@ El modelo CMMI vio la luz en 1987 como Capability Maturity Model (CMM), un proye
 <p class="texto">
 MMI define los modelos para la mejora, evaluación de procesos para desarrollo, mantenimiento, operación de sistemas y productos de software. Así mismo su objetivo es servir para cualquier organización que decida adquirir un camino constante en la mejora continua partiendo del  establecimiento e institucionalización de una serie de áreas de proceso.</p>
 
-  <figure><img src="img/calidad/09.png" width="300" height="300"></figure>
+  <figure><img src="img/calidad/09.PNG" width="300" height="300"></figure>
 
           </article>
         
