--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1>INTRODUCCION AL DESARROLLO DE SOFTWARE</h1>
 		<figure>
 			<table>
-				<td><img src="img/menu/Logo.jpg" alt=""></td>
+				<td><img src="img/menu/logo.jpg" alt=""></td>
 			</table>
 		</figure>
 	</header>
@@ -122,7 +122,7 @@
 	</section>
 
 	<footer>
-		<td><img src="img/menu/Logo.jpg" alt=""></td>
+		<td><img src="img/menu/logo.jpg" alt=""></td>
 	</footer>
 
 </body>
